2013-07-07  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/dmatrix_sphmesh.m: (0.2.0)
	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.2.0)
	* matlab/test/test_dmatrix_sphmesh.m: (0.1.1)
	* matlab/test/test_surface_tridomain: (0.1.1)

	- Swap the order of the input arguments to (tri, x). This allows
	that we pass only the edge description of the mesh, tri, without
	having to also give vertex coordinates. In addition, this also
	agrees with the format of the rest of mesh-related function in
	gerardus.

2013-07-05  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/quadsurf.m: (0.1.0)

	- QUADSURF Quadrangular mesh surface plot.

2013-07-03  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/tri_squeeze.m: (0.1.0)

	- TRI_SQUEEZE Remove disconnected vertices from triangular mesh.

2013-07-02  Ramon Casero  <rcasero@gmail.com>

	* matlab/update_README.sh: (0.2.1)

	- Add entry for ManifoldToolbox in the summary.

	* Add matlab/ThirdPartyToolbox/SphereUniformSamplingToolbox:
	* matlab/add_gerardus_paths.m: (0.1.5)

	- Uniform Sampling of a Sphere by Anton Semechko. 05 Jun 2012
	(Updated 23 May 2013). Downloaded from

	http://www.mathworks.co.uk/matlabcentral/fileexchange/37004-uniform-sampling-of-a-sphere

	- "The main function is titled 'ParticleSampleSphere' and allows
	you to create an approximately uniform triangular tessellation of
	the unit sphere by minimizing the generalized electrostatic
	potential energy (aka Reisz s-energy) of the system of charged
	particles. Effectively, this function produces a locally optimal
	solution to the problem of finding a minimum Reisz s-energy
	configuration of N equal charges (s=1 corresponds to the original
	Thomson problem)."

	* matlab/ManifoldToolbox/surface_tridomain.m: (0.2.0)

	- Add syntax [TRI, UV] = surface_tridomain('rect', ULIN, VLIN).

2013-07-01  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/surface_tridomain.m: (0.1.1)
